force-app/main/default/objects/ResourceAbsence/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>DATEVALUE(End)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de fim</label>
    <type>Date</type>
</CustomField>