force-app/main/default/objects/ResourceAbsence/fields/FSL__Approved__c.field-meta.xml
<CustomField>
    <fullName>FSL__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>