force-app/main/default/objects/ResourceAbsence/fields/FSL__Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>FSL__Duration_In_Minutes__c</fullName>
    <formula>IF (ISBLANK(Start), 0, (End - Start)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>