force-app/main/default/objects/ResourceAbsence/fields/FSL__Estimated_Travel_Time_To_Source__c.field-meta.xml
<CustomField>
    <fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName>
    <label>Estimated Travel Time To Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Aerial</fullName>
            </value>
            <value>
                <fullName>SLR</fullName>
            </value>
            <value>
                <fullName>Predictive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>