force-app/main/default/objects/ResourceAbsence/fields/FSL__InternalSLRGeolocation__c.field-meta.xml
<CustomField>
    <fullName>FSL__InternalSLRGeolocation__c</fullName>
    <label>Internal SLR Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>