force-app/main/default/objects/ResourceAbsence/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>DATEVALUE(Start)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>